Attempt to fix flickering

--- a/src/client/styles.scss
+++ b/src/client/styles.scss
@@ -52,6 +52,8 @@ canvas {
 .App {
   width: 100%;
   height: 100%;
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
   font-family: 'Roboto Slab', sans-serif;
 }
 
@@ -143,6 +145,8 @@ canvas {
   min-height: 100%;
   position: absolute;
   will-change: top;
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
   background-color: rgba(255, 255, 255, 0.97);
 }
 
@@ -154,6 +158,8 @@ canvas {
   font-weight: 400;
   z-index: 0;
   align-items: center;
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
 }
 
 .logo {
@@ -668,6 +674,8 @@ $gray: #9b9b9b;
   }
 
   .content-block {
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
     margin: 2rem 2rem;
   }
 
